--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "id": "org.nativescript.grayscale",
     "tns-android": {
       "version": "2.4.0-next-2016-09-29-1186"
+    },
+    "tns-ios": {
+      "version": "2.4.0-2016-10-11-5"
     }
   },
   "dependencies": {
