--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "nativescript": {
     "id": "org.nativescript.grayscale",
     "tns-android": {
-      "version": "next"
+      "version": "3.2.0-2017-8-29-1"
     },
     "tns-ios": {
       "version": "next"
@@ -19,6 +19,24 @@
     "babel-traverse": "6.15.0",
     "babel-types": "6.15.0",
     "babylon": "6.10.0",
-    "lazy": "1.0.11"
+    "copy-webpack-plugin": "~4.0.1",
+    "extract-text-webpack-plugin": "~3.0.0",
+    "lazy": "1.0.11",
+    "nativescript-css-loader": "~0.26.0",
+    "nativescript-dev-webpack": "next",
+    "raw-loader": "~0.5.1",
+    "resolve-url-loader": "~2.1.0",
+    "webpack": "~3.2.0",
+    "webpack-bundle-analyzer": "^2.8.2",
+    "webpack-sources": "~1.0.1"
+  },
+  "scripts": {
+    "ns-bundle": "ns-bundle",
+    "publish-ios-bundle": "npm run ns-bundle --ios --publish-app",
+    "generate-android-snapshot": "generate-android-snapshot --targetArchs arm,arm64,ia32 --install",
+    "start-android-bundle": "npm run ns-bundle --android --run-app",
+    "start-ios-bundle": "npm run ns-bundle --ios --run-app",
+    "build-android-bundle": "npm run ns-bundle --android --build-app",
+    "build-ios-bundle": "npm run ns-bundle --ios --build-app"
   }
 }
