--- a/package.json
+++ b/package.json
@@ -6,30 +6,32 @@
   "nativescript": {
     "id": "org.nativescript.grayscale",
     "tns-ios": {
-      "version": "3.4.1"
+      "version": "4.0.0"
     },
     "tns-android": {
-      "version": "3.4.1"
+      "version": "4.0.0"
     }
   },
   "dependencies": {
-    "tns-core-modules": "^3.4.0"
+    "tns-core-modules": "^4.0.0"
   },
   "devDependencies": {
     "babel-traverse": "6.26.0",
     "babel-types": "6.26.0",
     "babylon": "6.18.0",
-    "copy-webpack-plugin": "~4.3.0",
+    "clean-webpack-plugin": "~0.1.19",
+    "copy-webpack-plugin": "~4.5.1",
     "css-loader": "~0.28.7",
     "extract-text-webpack-plugin": "~3.0.2",
     "lazy": "1.0.11",
-    "nativescript-dev-webpack": "^0.9.1",
-    "nativescript-worker-loader": "~0.8.1",
+    "nativescript-dev-webpack": "next",
+    "nativescript-worker-loader": "~0.9.0",
     "raw-loader": "~0.5.1",
-    "resolve-url-loader": "~2.2.1",
-    "uglifyjs-webpack-plugin": "~1.1.6",
-    "webpack": "~3.10.0",
+    "resolve-url-loader": "~2.3.0",
+    "uglifyjs-webpack-plugin": "~1.2.4",
+    "webpack": "~4.5.0",
     "webpack-bundle-analyzer": "^2.9.1",
+    "webpack-cli": "~2.0.14",
     "webpack-sources": "~1.1.0"
   }
 }
